# wpf-rust-compare-charts

./: .editorconfig  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md
.agentic-security/: .welcomed  hook-throttle.json
.claude/: settings.json
.github/workflows/: ci.yml  release-egui.yml  release.yml
data/: .gitignore  README.md  dashboard-layout.json  pytest.ini  ride.db  ride_small.db  simulate.py
data/telemetry/: channels.py  generator.py  schema.py  signals.py
data/tests/: test_channels.py  test_cli.py  test_fixture.py  test_generator.py  test_schema.py  test_signals.py
docs/reference/: dashboard-target.md
docs/sample ui/: .thumbnail  INU Monitor (standalone-src).html  INU Monitor.dc.html  INU Monitor.html
docs/superpowers/plans/: 2026-06-25-data-simulator.md  2026-06-25-rust-backend.md  2026-06-25-rust-frontend-core.md  2026-06-26-dotnet-core.md  2026-06-26-dotnet-ui.md  2026-06-26-rust-ui.md  2026-06-27-ui-phase1-shell.md  2026-06-27-ui-phase2-params.md  2026-06-27-ui-phase2_5-playwright.md  2026-06-27-ui-phase3-widgets.md  2026-06-28-dotnet-phase1-wpf-shell.md  2026-06-28-ui-phase4-interactions.md  2026-06-28-ui-phase5-map.md  2026-06-28-ui-phase6-offline-maplibre.md  2026-06-28-ui-phase9-uplot-line.md  (+17 more)
dotnet/: .gitignore  Directory.Build.props  README.md  StyleCop.ruleset  TelemetryPoc.slnx  coverlet.runsettings  stylecop.json  test-output.txt
rust/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
rust-egui/: Cargo.toml  README.md
rust-egui/src/: basemap.rs  main.rs
rust-native/: Cargo.toml  README.md
rust-native/.cargo/: config.toml
rust-native/src/: chart.rs  data.rs  feed.rs  main.rs  ui.rs
rust/e2e/: interactions.spec.ts  map.spec.ts  shell.spec.ts  widgets.spec.ts
rust/src/: App.tsx  test-setup.ts  types.ts
rust/src-tauri/: Cargo.toml  tauri.conf.json
rust/src-tauri/capabilities/: default.json
rust/src-tauri/src/: control.rs  db.rs  frame.rs  lib.rs  main.rs  metrics.rs  provision.rs  replay.rs  server.rs  tiles.rs
rust/src-tauri/tests/: tiles_integration.rs  ws_integration.rs
tiles/: README.md  fetch-glyphs.sh  fixture.mbtiles  make_fixture.py  test_make_fixture.py
(+349 files in other folders)
