[package]
name = "rust-egui"
version = "0.1.0"
edition = "2021"

[dependencies]
app_lib = { path = "../rust/src-tauri", package = "app" }
eframe = { version = "0.29", default-features = false, features = ["glow", "default_fonts"] }
egui = "0.29"
flate2 = "1.1.9"
geozero = { version = "0.15.1", features = ["with-mvt"] }
prost = "0.14.4"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "rust-egui"
path = "src/main.rs"
